# usrp_rs

./: Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.hpp
src/: lib.rs  simulator.rs  usrp.rs
