[package]
name = "usrp"
version = "0.1.0"
authors = ["Venkat Arun"]
edition = "2018"

[dependencies]
failure = "0.1"
num = "0.2"
rand = "0.7"
rand_distr = "0.3"
float_ord = "0.2"

[build-dependencies]
bindgen = "0.49"
cc = { version = "1.0", features = ["parallel"]}

[features]
# Compile to run on a real Raspberry Pi. By default, only a simulator will be
# generated. This module contains the trait `RadioRx` for use by the simulator
rpi = []
